# Colvillea-archive

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake
data/: config.ini  imgui.ini  ltc_1.exr  ltc_1_ashCloth.exr  ltc_2.exr
examples/Dining-room/: LICENSE.txt
examples/Dining-room/textures/: Skydome.hdr
src/Eigen/src/LU/: InverseImpl.h
src/colvillea/: CMakeLists.txt
src/colvillea/Application/: Application.cpp  Application.h  Colvillea.cpp  GUIHelper.h  GlobalDefs.cpp  GlobalDefs.h  SceneGraph.cpp  SceneGraph.h  TWAssert.h
src/colvillea/Device/Camera/: PinholeCamera.cu  SphericalSkybox.cu
src/colvillea/Device/Filter/: Filter.h
src/colvillea/Device/Geometry/: Quad.cu  Quad.h  Sphere.cu  Sphere.h  TriangleMesh.cu
src/colvillea/Device/Integrator/: AnalyticalDirectLighting -clipless.cu  AnalyticalDirectLighting.cu  DirectLighting.cu  Integrator.h  PathTracing.cu
src/colvillea/Device/Light/: HDRILight.cu  HitProgram.cu  LightUtil.h  PointLight.cu  QuadLight.cu  SphereLight.cu
src/colvillea/Device/SH/: AxialMoments.hpp  DirectionsSampling.hpp  SphericalIntegration.hpp
src/colvillea/Device/Sampler/: FiniteSampler.h  HaltonSampler.h  HaltonSampler_Common.h  Sampler.h  SobolSampler.h
src/colvillea/Device/Shader/: Cloth.cu  Emissive.cu  Fresnel.h  FrostedMetal.cu  Lambert.cu  LambertBRDF.h  MicrofacetBRDF.h  Microsurface.h  Plastic.cu  RoughDielectric.cu  RoughMetal.cu  SmoothGlass.cu  SmoothMirror.cu
src/freeImage/: FreeImagePlus.h
src/imgui/: CMakeLists.txt  imconfig.h
src/tinyfiledialogs/: tinyfiledialogs.c  tinyfiledialogs.h
(+55 files in other folders)
